--- a/package.json
+++ b/package.json
@@ -1,10 +1,27 @@
 {
-  "name": "waltonbot",
-  "version": "1.0.0",
-  "description": "ExpressJS App built to remind big families everybody's birthdays.",
+  "name": "micro-rest",
+  "version": "0.0.0",
+  "description": "micro-rest",
   "main": "index.js",
-  "repository": "https://github.com/serranoarevalo/waltonbot",
-  "author": "Nicolás Serrano Arévalo <itnico.las.me@gmail.com>",
+  "scripts": {
+    "start": "yarn run build && micro dist/bundle.js",
+    "build": "webpack",
+    "watch": "webpack -w"
+  },
+  "repository": "https://github.com/hyperfuse/micro-rest.git",
+  "author": "Kennet Postigo",
   "license": "MIT",
-  "private": false
+  "dependencies": {
+    "micro": "^6.2.0",
+    "micro-api": "^0.0.11",
+    "micro-compress": "^1.0.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-transform-flow-strip-types": "^6.21.0",
+    "babel-preset-es2015": "^6.18.0",
+    "flow-bin": "^0.37.4",
+    "webpack": "2.2.0-rc.7"
+  }
 }
