--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "yarn run build && micro dist/bundle.js",
     "build": "webpack",
-    "watch": "webpack -w"
+    "watch": "webpack -w && micro dist/bundle.js"
   },
   "repository": "https://github.com/hyperfuse/micro-rest.git",
   "author": "Kennet Postigo",
@@ -14,7 +14,8 @@
   "dependencies": {
     "micro": "^6.2.0",
     "micro-api": "^0.0.11",
-    "micro-compress": "^1.0.0"
+    "micro-compress": "^1.0.0",
+    "node-fetch": "^1.7.3"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
@@ -22,6 +23,7 @@
     "babel-plugin-transform-flow-strip-types": "^6.21.0",
     "babel-preset-es2015": "^6.18.0",
     "flow-bin": "^0.37.4",
+    "nodemon": "^1.14.11",
     "webpack": "2.2.0-rc.7"
   }
 }
