--- a/package.json
+++ b/package.json
@@ -3,18 +3,25 @@
   "version": "0.0.0",
   "description": "micro-rest",
   "scripts": {
-    "start": "yarn run build && micro dist/bundle.js --watch",
+    "start": "micro src/index.js",
     "build": "webpack",
     "watch": "webpack -w",
-    "dev": "yarn run build && micro-dev dist/bundle.js"
+    "dev": "nodemon micro src/index.js"
   },
   "repository": "https://github.com/hyperfuse/micro-rest.git",
   "author": "Kennet Postigo",
   "license": "MIT",
   "dependencies": {
-    "micro": "^6.2.0",
+    "defaultable": "^0.7.2",
+    "dgram": "^1.0.1",
+    "dns": "^0.2.2",
+    "forever-agent": "^0.6.1",
+    "micro": "^6.2.1",
     "micro-api": "^0.0.11",
     "micro-compress": "^1.0.0",
+    "net": "^1.0.2",
+    "request": "^2.83.0",
+    "tls": "0.0.1",
     "twilio": "^3.11.0"
   },
   "devDependencies": {
@@ -22,6 +29,7 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "micro-dev": "^2.2.0",
+    "nodemon": "^1.14.11",
     "webpack": "2.2.0-rc.7"
   }
 }
