--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.0.0",
   "description": "micro-rest",
   "scripts": {
-    "start": "micro src/index.js",
+    "start": "micro index.js",
     "build": "webpack",
-    "watch": "webpack -w",
-    "dev": "nodemon micro src/index.js"
+    "watch": "webpack -w"
   },
   "repository": "https://github.com/hyperfuse/micro-rest.git",
   "author": "Kennet Postigo",
