--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "micro-rest",
+  "name": "waltonbot",
   "version": "0.0.0",
-  "description": "micro-rest",
+  "description": "waltonbot",
   "scripts": {
-    "start": "micro index.js",
-    "build": "webpack",
-    "watch": "webpack -w"
+    "start": "micro index.js"
   },
-  "repository": "https://github.com/hyperfuse/micro-rest.git",
+  "repository": "https://github.com/serranoarevalo/waltonbot",
   "author": "Kennet Postigo",
   "license": "MIT",
   "dependencies": {
@@ -15,6 +13,7 @@
     "dgram": "^1.0.1",
     "dns": "^0.2.2",
     "forever-agent": "^0.6.1",
+    "hawk": "^7.0.6",
     "micro": "^6.2.1",
     "micro-api": "^0.0.11",
     "micro-compress": "^1.0.0",
