--- a/package.json
+++ b/package.json
@@ -9,17 +9,8 @@
   "author": "Kennet Postigo",
   "license": "MIT",
   "dependencies": {
-    "defaultable": "^0.7.2",
-    "dgram": "^1.0.1",
-    "dns": "^0.2.2",
-    "forever-agent": "^0.6.1",
-    "hawk": "^7.0.6",
     "micro": "^6.2.1",
     "micro-api": "^0.0.11",
-    "micro-compress": "^1.0.0",
-    "net": "^1.0.2",
-    "request": "^2.83.0",
-    "tls": "0.0.1",
     "twilio": "^3.11.0"
   },
   "devDependencies": {
@@ -29,5 +20,11 @@
     "micro-dev": "^2.2.0",
     "nodemon": "^1.14.11",
     "webpack": "2.2.0-rc.7"
+  },
+  "now": {
+    "alias": "waltonbot",
+    "engines": {
+      "node": "9.3.0"
+    }
   }
 }
